引入更好的注解动态上下文处理器